--- a/_layout/style.html
+++ b/_layout/style.html
@@ -2,4 +2,5 @@
 <link rel="stylesheet" href="/css/tufte.css">
 <link rel="stylesheet" href="/css/latex.css">
 <link rel="stylesheet" href="/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
-<link rel="icon" href="/assets/favicon.png">
+<link rel="stylesheet" href="/css/custom.css"> <!-- custom modifications for my theme-->
+<link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
